[gd_scene load_steps=8 format=3 uid="uid://b5agdh8kvqr5x"]

[ext_resource type="Script" uid="uid://d3tcsyjlmekn6" path="res://scenes/ending.gd" id="1_fyrdv"]
[ext_resource type="Texture2D" uid="uid://dvutrigsjrche" path="res://assets/art/room_scenes/ending_1.png" id="2_fyrdv"]
[ext_resource type="Shader" uid="uid://duykroe05j4bw" path="res://shaders/blood.gdshader" id="2_qa3ag"]
[ext_resource type="Texture2D" uid="uid://bfsk7g3vceq8g" path="res://assets/art/mouse/eraser.png" id="3_nfmnx"]
[ext_resource type="Script" uid="uid://ope4rod7xll4" path="res://scenes/mouse.gd" id="4_qa3ag"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qa3ag"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5amew"]
shader = ExtResource("2_qa3ag")
shader_parameter/noise = SubResource("NoiseTexture2D_qa3ag")
shader_parameter/blood_coef = 0.0
shader_parameter/color = Color(0.392157, 0, 0, 1)
shader_parameter/base_color = Color(1, 1, 1, 0.556)
shader_parameter/enabled = true

[node name="ending" type="Node2D" node_paths=PackedStringArray("ending_text", "scene_container", "SCENE_ENDING")]
script = ExtResource("1_fyrdv")
ending_text = NodePath("Control/scene_container/ending_scene/Panel/VBoxContainer/ending_text")
scene_container = NodePath("Control/scene_container")
SCENE_ENDING = NodePath("Control/scene_container/ending_scene")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="scene_container" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ending_scene" type="TextureRect" parent="Control/scene_container"]
self_modulate = Color(1, 1, 1, 0.556863)
material = SubResource("ShaderMaterial_5amew")
layout_mode = 2
texture = ExtResource("2_fyrdv")
expand_mode = 1
stretch_mode = 5

[node name="Panel" type="Panel" parent="Control/scene_container/ending_scene"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/scene_container/ending_scene/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/scene_container/ending_scene/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 36
text = "You Got Caught"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ending_text" type="Label" parent="Control/scene_container/ending_scene/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "(why are you holding a dead body???)"
horizontal_alignment = 1

[node name="UI_container" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_edit_lock_ = true

[node name="main_menu" type="Button" parent="Control/UI_container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_mode = 0
text = "exit to main"

[node name="restart_level" type="Button" parent="Control/UI_container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
text = "restart"

[node name="mouse" type="Sprite2D" parent="."]
texture = ExtResource("3_nfmnx")
script = ExtResource("4_qa3ag")

[connection signal="pressed" from="Control/UI_container/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Control/UI_container/restart_level" to="." method="_on_restart_level_pressed"]
